--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: minima
 
 site.title: Texploring
 site.author.name: Anurag Setia
-title: Texploring | Anurag Setia
+title: Texploring
 description: "Anurag Setia's blog about technology and some..."
 
 header_pages:
